k8s/assets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  labels:
    app: assets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      containers:
        - name: assets
          image: ghcr.io/ashkann/shahnameh/assets
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: assets
spec:
  type: NodePort
  selector:
    app: assets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
