k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: shahnameh
spec:
  rules:
    - http:
        paths:
#          - path: /
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: assets
#                port:
#                  number: 80
          - path: /assets/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: assets
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 80
